--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+.loader-head {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.error {
+  color: red;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.MuiGrid-spacing-xs-8 {
+  margin: 0 !important;
+  width: 100% !important;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.MuiTreeItem-label {
+  font-size: 1.6em !important;
 }
 
-.App-link {
-  color: #61dafb;
+.Mui-selected>.MuiTreeItem-content .MuiTreeItem-label {
+  background-color: #4791db !important;
 }
 
-@keyframes App-logo-spin {
-  from {
+.loader {
+  width: 5rem;
+  height: 5rem;
+  border: 2px solid #3f51b5;
+  border-radius: 50%;
+  border-top-color: transparent;
+  border-bottom-color: transparent;
+  animation: spin 1s linear infinite;
+  -webkit-animation: spin 2s linear infinite;
+  margin: 0 auto;
+  z-index: 100;
+}
+
+@keyframes spin {
+  0% {
     transform: rotate(0deg);
   }
-  to {
+  100% {
     transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
   }
 }
